--- a/css/styles.css
+++ b/css/styles.css
@@ -619,7 +619,7 @@ a {
 }
 
 .block--sweked-right {
-  padding-bottom: calc(var(--padding-vertical) +rem);
+  padding-bottom: calc(var(--padding-vertical) + 4rem);
   clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 80%);
 }
 
